--- a/FinPlan.Web/Components/Pages/Home.razor
+++ b/FinPlan.Web/Components/Pages/Home.razor
@@ -67,7 +67,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-header">
-                            <h5 class="mb-0">Why Use FinPlan?</h5>
+                            <h5 class="mb-0">Why Use ReWealth-en?</h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
